hphp/test/slow/type_annotation/type_annotation_alias3.php.expectf
Fatal error: when resolving type constant C::T, class NonExistentAlias not found in %s on line 7
